--- a/openhpi/trunk/docs/man/Makefile.am
+++ b/openhpi/trunk/docs/man/Makefile.am
@@ -29,7 +29,7 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
-EXTRA_DIST		= openhpi-switcher.pod.1 openhpi.pod.7
+EXTRA_DIST		= openhpi.pod.7
 
 %.1: %.pod.1
 	pod2man --release=$(VERSION) --name=`echo $@ | sed 's/.1//'` \
@@ -47,7 +47,7 @@ EXTRA_DIST		= openhpi-switcher.pod.1 openhpi.pod.7
 	pod2man --release=$(VERSION) --name=`echo $@ | sed 's/.7//'` \
 		-s 7 -c "OpenHPI" $< $@
 
-man_MANS = openhpi-switcher.1 openhpi.7
+man_MANS = openhpi.7
 
 clean-local: am_config_clean-local
 
