#1520861 fixing when disabling the daemon but the standard lib would not work anyway

--- a/openhpi/trunk/plugins/Makefile.am
+++ b/openhpi/trunk/plugins/Makefile.am
@@ -31,7 +31,7 @@
 
 MAINTAINERCLEANFILES 	= Makefile.in
 
-SUBDIRS = @DUMMY@ @IPMI@ @WATCHDOG@ @SYSFS@ @SNMP_BC@ @IPMIDIRECT@ @SIMULATOR@ @RTAS@
+SUBDIRS = @IPMI@ @WATCHDOG@ @SYSFS@ @SNMP_BC@ @IPMIDIRECT@ @SIMULATOR@ @RTAS@
 DIST_SUBDIRS = 	dummy \
 		ipmi \
 		watchdog \
