--- a/openhpi/trunk/hpi_shell/Makefile.am
+++ b/openhpi/trunk/hpi_shell/Makefile.am
@@ -8,18 +8,19 @@ REMOTE_SOURCES		= openhpiclient.cpp openhpiclient.h
 
 EXTRA_DIST		= hpi_cmd.sh
 
+INCLUDES		= -I$(top_srcdir)/include -I$(top_srcdir)/utils
+
 if OH_DAEMON_ENABLED
-INCLUDES 		= -I$(top_srcdir)/include -I$(top_srcdir)/utils \
-				-I$(top_srcdir)/openhpid  -I$(top_srcdir)/marshal \
-				-DCLIENT
+INCLUDES 		+= -I$(top_srcdir)/openhpid \
+			   -I$(top_srcdir)/marshal \
+			   -DCLIENT
 COMMONLIBS		= $(top_builddir)/hpi_ui_lib/libopenhpiui.la \
-				$(top_builddir)/marshal/libohtcpconnx.la \
-				-L$(top_builddir)/utils/.libs -lopenhpiutils
+			  $(top_builddir)/marshal/libohtcpconnx.la \
+			  -L$(top_builddir)/utils/.libs -lopenhpiutils
 else
-INCLUDES 		= -I$(top_srcdir)/include -I$(top_srcdir)/utils
 COMMONLIBS		= $(top_builddir)/src/libopenhpi.la \
-				$(top_builddir)/hpi_ui_lib/libopenhpiui.la \
-				@STATIC_PLUGIN_LIBS@ @STATIC_PLUGIN_EXTRA_LIBS@
+			  $(top_builddir)/hpi_ui_lib/libopenhpiui.la \
+			  @STATIC_PLUGIN_LIBS@ @STATIC_PLUGIN_EXTRA_LIBS@
 endif
 
 AM_CFLAGS 		= @CFLAGS@ -D_REENTRANT
