#1531533 Dont need to implement _init constructor function anymore. Take out to avoid problems when statically linking and/or embedded systems.

--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -62,7 +62,7 @@ libopenhpi_la_SOURCES = \
 	openhpiclient.cpp \
 	openhpiclient.h
 
-libopenhpi_la_LDFLAGS = -version-info @HPI_LIB_VERSION@ -Xcompiler -nostartfiles
+libopenhpi_la_LDFLAGS = -version-info @HPI_LIB_VERSION@
 libopenhpi_la_LIBADD  = $(top_builddir)/marshal/libohtcpconnx.la -lstdc++ \
                         $(top_builddir)/utils/libopenhpiutils.la
 
