--- a/openhpi/trunk/plugins/remote_client/Makefile.am
+++ b/openhpi/trunk/plugins/remote_client/Makefile.am
@@ -42,8 +42,8 @@ libremote_client_la_SOURCES= \
 	client_config.h \
 	remote_client.cpp
 
-libremote_client_la_LIBADD = $(top_builddir)/marshal/libopenhpimarshal.la -luuid
-libremote_client_la_LDFLAGS= -version-info @HPI_LIB_VERSION@
+libremote_client_la_LIBADD = $(top_builddir)/utils/libopenhpiutils.la $(top_builddir)/marshal/libopenhpimarshal.la -luuid
+libremote_client_la_LDFLAGS= -module -version-info @HPI_LIB_VERSION@
 
 openhpiclient.cpp:
 	if test ! -f $@ -a ! -L $@; then \
