--- a/openhpi/trunk/plugins/ipmi/Makefile.am
+++ b/openhpi/trunk/plugins/ipmi/Makefile.am
@@ -67,6 +67,6 @@ libipmi_la_SOURCES	= ipmi.c 		\
 			  atca_shelf_fru.c	\
 			  ipmi.h
 			  
-libipmi_la_LIBADD	= $(top_builddir)/src/libopenhpi.la $(top_builddir)/utils/libopenhpiutils.la -luuid -lncurses -lOpenIPMI -lOpenIPMIposix @OPENIPMI_LIBS@
-#libipmi_la_LDFLAGS	= -version-info @HPI_LIB_VERSION@ -export-symbols $(srcdir)/ipmi.sym
-libipmi_la_LDFLAGS	= -version-info @HPI_LIB_VERSION@ -export-dymanic $(srcdir)/ipmi.sym
+libipmi_la_LIBADD	= $(top_builddir)/utils/libopenhpiutils.la -luuid -lncurses -lOpenIPMI -lOpenIPMIposix @OPENIPMI_LIBS@
+#libipmi_la_LDFLAGS	= -module -version-info @HPI_LIB_VERSION@ -export-symbols $(srcdir)/ipmi.sym
+libipmi_la_LDFLAGS	= -module -version-info @HPI_LIB_VERSION@ -export-dymanic $(srcdir)/ipmi.sym
