--- a/openhpi/trunk/plugins/simulator/Makefile.am
+++ b/openhpi/trunk/plugins/simulator/Makefile.am
@@ -27,7 +27,7 @@ include_HEADERS		= sim_injector_ext.h
 
 pkglib_LTLIBRARIES	= libsimulator.la
 
-libsimulator_la_LIBADD	= -luuid $(top_builddir)/src/libopenhpi.la $(top_builddir)/utils/libopenhpiutils.la
+libsimulator_la_LIBADD	= -luuid $(top_builddir)/utils/libopenhpiutils.la
 libsimulator_la_SOURCES	= sim_init.c sim_init.h \
                           sim_resources2.c sim_resources.h \
 			  sim_sensors.c sim_sensors.h \
@@ -44,4 +44,4 @@ libsimulator_la_SOURCES	= sim_init.c sim_init.h \
 			  sim_hotswap.c sim_hotswap.h \
 			  sim_reset.c sim_reset.h
 
-libsimulator_la_LDFLAGS	= -version-info @HPI_LIB_VERSION@
+libsimulator_la_LDFLAGS	= -module -version-info @HPI_LIB_VERSION@
