#1544324 #1544323 #1544321 Fixing failed conformance tests for inventory and watchdog apis. Also adding implementation for auto extract timeout get in the simulator.

--- a/openhpi/trunk/plugins/snmp_client/Makefile.am
+++ b/openhpi/trunk/plugins/snmp_client/Makefile.am
@@ -35,4 +35,4 @@ libsnmp_client_la_SOURCES	= \
 				  sc_sensor_data.c
 				  
 libsnmp_client_la_LIBADD	= -luuid $(top_builddir)/utils/libopenhpiutils.la @SNMPLIBS@ $(SNMPUTILSDIR)/libopenhpi_snmp.la
-libsnmp_client_la_LDFLAGS	= -module -avoid-version
+libsnmp_client_la_LDFLAGS	= -module -version-info @HPI_LIB_VERSION@
