#1572322 simulator test should look in domain event log for discovery events which may have ocurred before event subscription or session creation

--- a/openhpi/trunk/plugins/simulator/t/Makefile.am
+++ b/openhpi/trunk/plugins/simulator/t/Makefile.am
@@ -257,4 +257,5 @@ sim_sanity_044_LDFLAGS = -export-dynamic
 
 sim_sanity_045_SOURCES = sim_sanity_045.c
 sim_sanity_045_LDADD = $(TDEPLIB)
+sim_sanity_045_LDFLAGS = -export-dynamic
 
