#1572955 Adding new epath pattern prototypes to python bindings

--- a/python/trunk/Makefile
+++ b/python/trunk/Makefile
@@ -4,7 +4,7 @@ all:
 	ln -sf `find ./ -name "_openhpi.so" | head -n1`
 
 install:
-	python setup.py install
+	python setup.py install --prefix=/usr
 
 dist:
 	python setup.py sdist
