--- a/openhpi/branches/2.7.x/plugins/ipmidirect/Makefile.am
+++ b/openhpi/branches/2.7.x/plugins/ipmidirect/Makefile.am
@@ -83,6 +83,8 @@ libipmidirect_la_SOURCES= \
 		ipmi_mc_vendor.cpp \
 		ipmi_mc_vendor_force.h \
 		ipmi_mc_vendor_force.cpp \
+		ipmi_mc_vendor_intel.h \
+		ipmi_mc_vendor_intel.cpp \
 		ipmi_mc_vendor_fix_sdr.h \
 		ipmi_mc_vendor_fix_sdr.cpp \
 		ipmi_msg.h \
@@ -109,6 +111,8 @@ libipmidirect_la_SOURCES= \
 		ipmi_text_buffer.cpp \
 		ipmi_utils.h \
 		ipmi_utils.cpp \
+		ipmi_watchdog.h \
+		ipmi_watchdog.cpp \
 		thread.h \
 		thread.cpp
 
