#1532156: Adding oHpiHandlerFind and oHpiHandlerRetry functions

--- a/openhpi/trunk/src/t/Makefile.am
+++ b/openhpi/trunk/src/t/Makefile.am
@@ -11,4 +11,4 @@
 MAINTAINERCLEANFILES    = Makefile.in
 EXTRA_DIST              = ohpi_tests.txt
 
-SUBDIRS                 = ohpi ohpic
+SUBDIRS                 = ohpi
