--- a/openhpi/trunk/src/t/ohpi/Makefile.am
+++ b/openhpi/trunk/src/t/ohpi/Makefile.am
@@ -24,30 +24,11 @@ TESTS_ENVIRONMENT = OPENHPI_PATH=$(top_builddir)/plugins/simulator:$(top_builddi
 TESTS_ENVIRONMENT += OPENHPI_UID_MAP=$(top_builddir)/src/t/ohpi/uid_map
 TESTS_ENVIRONMENT += OPENHPI_CONF=$(top_srcdir)/src/t/ohpi/openhpi.conf
 
-TESTS = ohpi_000 \
-        ohpi_001 \
-        ohpi_002 \
-        ohpi_003 \
-        ohpi_004 \
-        ohpi_005 \
-        ohpi_006 \
+TESTS = \
         ohpi_007 \
         ohpi_008 \
         ohpi_009 \
         ohpi_010 \
-        ohpi_011 \
-        ohpi_012 \
-        ohpi_013 \
-        ohpi_014 \
-        ohpi_015 \
-        ohpi_016 \
-        ohpi_017 \
-        ohpi_018 \
-        ohpi_019 \
-        ohpi_020 \
-        ohpi_021 \
-        ohpi_022 \
-        ohpi_023 \
         ohpi_024 \
         ohpi_025 \
         ohpi_026 \
@@ -69,27 +50,6 @@ TESTS = ohpi_000 \
 
 check_PROGRAMS = $(TESTS)
 
-ohpi_000_SOURCES = ohpi_000.c
-ohpi_000_LDADD   = $(TDEPLIB)
-
-ohpi_001_SOURCES = ohpi_001.c
-ohpi_001_LDADD   = $(TDEPLIB)
-
-ohpi_002_SOURCES = ohpi_002.c
-ohpi_002_LDADD   = $(TDEPLIB)
-
-ohpi_003_SOURCES = ohpi_003.c
-ohpi_003_LDADD   = $(TDEPLIB)
-
-ohpi_004_SOURCES = ohpi_004.c
-ohpi_004_LDADD   = $(TDEPLIB)
-
-ohpi_005_SOURCES = ohpi_005.c
-ohpi_005_LDADD   = $(TDEPLIB)
-
-ohpi_006_SOURCES = ohpi_006.c
-ohpi_006_LDADD   = $(TDEPLIB)
-
 ohpi_007_SOURCES = ohpi_007.c
 ohpi_007_LDADD   = $(TDEPLIB)
 
@@ -101,45 +61,6 @@ ohpi_009_LDADD   = $(TDEPLIB)
 
 ohpi_010_SOURCES = ohpi_010.c
 ohpi_010_LDADD   = $(TDEPLIB)
-
-ohpi_011_SOURCES = ohpi_011.c
-ohpi_011_LDADD   = $(TDEPLIB)
-
-ohpi_012_SOURCES = ohpi_012.c
-ohpi_012_LDADD   = $(TDEPLIB)
-
-ohpi_013_SOURCES = ohpi_013.c
-ohpi_013_LDADD   = $(TDEPLIB)
-
-ohpi_014_SOURCES = ohpi_014.c
-ohpi_014_LDADD   = $(TDEPLIB)
-
-ohpi_015_SOURCES = ohpi_015.c
-ohpi_015_LDADD   = $(TDEPLIB)
-
-ohpi_016_SOURCES = ohpi_016.c
-ohpi_016_LDADD   = $(TDEPLIB)
-
-ohpi_017_SOURCES = ohpi_017.c
-ohpi_017_LDADD   = $(TDEPLIB)
-
-ohpi_018_SOURCES = ohpi_018.c
-ohpi_018_LDADD   = $(TDEPLIB)
-
-ohpi_019_SOURCES = ohpi_019.c
-ohpi_019_LDADD   = $(TDEPLIB)
-
-ohpi_020_SOURCES = ohpi_020.c
-ohpi_020_LDADD   = $(TDEPLIB)
-
-ohpi_021_SOURCES = ohpi_021.c
-ohpi_021_LDADD   = $(TDEPLIB)
-
-ohpi_022_SOURCES = ohpi_022.c
-ohpi_022_LDADD   = $(TDEPLIB)
-
-ohpi_023_SOURCES = ohpi_023.c
-ohpi_023_LDADD   = $(TDEPLIB)
 
 ohpi_024_SOURCES = ohpi_024.c
 ohpi_024_LDADD   = $(TDEPLIB)
