--- a/openhpi/trunk/src/Makefile.am
+++ b/openhpi/trunk/src/Makefile.am
@@ -34,7 +34,7 @@
 MAINTAINERCLEANFILES    = Makefile.in plugin_static.c
 MOSTLYCLEANFILES        = @TEST_CLEAN@
 
-EXTRA_DIST              = plugin_static.c.in hpi.sym
+EXTRA_DIST              = plugin_static.c.in
 
 INCLUDES                = @OPENHPI_INCLUDES@
 
@@ -67,8 +67,8 @@ libopenhpi_la_SOURCES   = \
                            ohpi.c
 
 libopenhpi_la_LIBADD    = @STATIC_PLUGIN_LIBS@ @STATIC_PLUGIN_EXTRA_LIBS@ $(top_builddir)/utils/libopenhpiutils.la
-libopenhpi_la_LDFLAGS   = -L$(top_builddir)/utils -version-info @HPI_LIB_VERSION@ -export-symbols $(top_srcdir)/src/hpi.sym
-libopenhpi_la_DEPENDENCIES = @STATIC_PLUGIN_LIBS@ $(top_srcdir)/src/hpi.sym
+libopenhpi_la_LDFLAGS   = -L$(top_builddir)/utils -version-info @HPI_LIB_VERSION@ -export-dynamic
+libopenhpi_la_DEPENDENCIES = @STATIC_PLUGIN_LIBS@
 
 $(top_builddir)/utils/libopenhpiutils.la:
 	make -C $(top_builddir)/utils libopenhpiutils.la
