--- a/openhpi/trunk/openhpid/Makefile.am
+++ b/openhpi/trunk/openhpid/Makefile.am
@@ -37,7 +37,7 @@ REMOTE_SOURCES		= \
 AM_CFLAGS		= @CFLAGS@
 INCLUDES 		= @OPENHPI_INCLUDES@  -I$(top_srcdir)/marshal
 
-EXTRA_DIST		= README openhpid.sh.in
+EXTRA_DIST		= openhpid.sh.in
 
 # daemon
 sbin_PROGRAMS           = openhpid
